# aula5-op-51

./: CMakeLists.txt  main.c  readme.md
01-exemplo1/: shellsort.c  shellsort.h
02-exemplo2/: shell-insertionsort.c  shell-insertionsort.h
03-barras/: barras.c  barras.h
